# python-backend-developer-task

./: Dockerfile  README.md  api.postman_collection.json  docker-compose.yaml  env.example  env.postman_environment.json  pyproject.toml  requirements.txt  schema.yml
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_active_alter_category_delete_status_and_more.py
orders/: middleware.py  models.py  serializers.py  signals.py  urls.py  views.py
orders/management/commands/: seed_test_data.py
orders/migrations/: 0001_initial.py  0002_alter_order_status_and_more.py  0003_alter_orderstatushistory_order.py
products/: filters.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_active_alter_product_delete_status_and_more.py
project/: settings.py  urls.py
tests/: test_api.py  test_middleware.py  test_models.py  test_signal.py
